force-app/main/default/objects/Loan_NJOP_Calculator_Result__c/Loan_NJOP_Calculator_Result__c.object-meta.xml
<CustomObject>
    <label>Loan NJOP Calculator Result</label>
    <nameField>
        <label>Loan NJOP Calculator Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan NJOP Calculator Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>