force-app/main/default/objects/Loan_NJOP_Calculator_Result__c/fields/angsuran__c.field-meta.xml
<CustomField>
    <fullName>angsuran__c</fullName>
    <label>angsuran</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>