force-app/main/default/objects/Loan_NJOP_Calculator_Result__c/fields/asuransi_jiwa__c.field-meta.xml
<CustomField>
    <fullName>asuransi_jiwa__c</fullName>
    <label>asuransi_jiwa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>