force-app/main/default/objects/Loan_NJOP_Calculator_Result__c/fields/biaya_provisi__c.field-meta.xml
<CustomField>
    <fullName>biaya_provisi__c</fullName>
    <label>biaya_provisi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>