force-app/main/default/objects/Loan_NJOP_Calculator_Result__c/fields/bunga_effektif_in_arrears__c.field-meta.xml
<CustomField>
    <fullName>bunga_effektif_in_arrears__c</fullName>
    <label>bunga_effektif_in_arrears</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>