force-app/main/default/objects/Loan_NJOP_Calculator_Result__c/fields/perkiraan_biaya_notaris__c.field-meta.xml
<CustomField>
    <fullName>perkiraan_biaya_notaris__c</fullName>
    <label>perkiraan_biaya_notaris</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>