force-app/main/default/objects/Loan_NJOP_Calculator_Result__c/fields/perkiraan_harga_rumah__c.field-meta.xml
<CustomField>
    <fullName>perkiraan_harga_rumah__c</fullName>
    <label>perkiraan_harga_rumah</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>