force-app/main/default/objects/Loan_NJOP_Calculator_Result__c/fields/perkiraan_nilai_funding__c.field-meta.xml
<CustomField>
    <fullName>perkiraan_nilai_funding__c</fullName>
    <label>perkiraan_nilai_funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>