force-app/main/default/objects/Loan_NJOP_Calculator_Result__c/fields/tenor_in_year__c.field-meta.xml
<CustomField>
    <fullName>tenor_in_year__c</fullName>
    <label>tenor_in_year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>